--- a/style.css
+++ b/style.css
@@ -5,20 +5,36 @@
 }
 
 #screen {
+    display: grid;
     width: 560px;
-    height: 250px;
-    border: 1px solid;
+    height: 200px;
+    border: 2px solid;
+}
+
+#screen div {
+    text-align: right;
+    border-bottom: 1px solid;
+    display: grid;
+    grid-template-columns: 95% 5%;
+}
+
+#operation {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border: 2px solid;
+    width: 560px;
 }
 
 #buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    border: 1px solid black;
+    border: 2px solid;
     width: 560px;
     height: 600px;
 }
 
-#buttons button {
-    font-size: 100px;
+#buttons button,
+#operation button {
+    font-size: xx-large;
     border: 1px solid;
 }
